Update sherlock-platform to IntelliJ idea/251.26094.121 (#166)